--- a/css/default.css
+++ b/css/default.css
@@ -44,5 +44,15 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  color: var(--default-font);
 }
 
+.container {
+  padding: var(--size-30);
+}
+
+ul > li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
