--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,31 @@
+.top-nav { 
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+}
+
 .logo > img { width: var(--size-150); }
+
+.nav-wrapper nav ul > li { 
+  display: inline-block; 
+  margin-left: var(--size-20);
+}
+
+.nav-wrapper nav ul > li:hover { 
+  color: var(--primary);
+  cursor: pointer;
+}
+
+.buy-now-btn {
+  background-color: var(--primary);
+  color: var(--white);
+  padding: var(--size-16) var(--size-30);
+  border: 1px solid var(--primary);
+  border-radius: var(--size-50);
+}
+
+.nav-wrapper nav ul > .buy-now-btn:hover {
+  color: var(--white);
+  border: 1px solid var(--primary-light);
+  box-shadow: 0 0 5px var(--primary-light);
+}
