--- a/css/default.css
+++ b/css/default.css
@@ -12,7 +12,9 @@
 
 
   --size-5: 0.3rem;
+  --size-9: 0.563rem;
   --size-10: 0.625rem;
+  --size-12: 0.75rem;
   --size-14: 0.875rem;
   --size-16: 1rem;
   --size-18: 1.125rem;
@@ -22,7 +24,11 @@
   --size-45: 2.813rem;
   --size-50: 3.125rem;
   --size-55: 3.438rem;
+  --size-60: 3.75rem;
+  --size-65: 4.063rem;
+  --size-70: 4.375rem;
   --size-75: 5rem;
+  --size-90: 5.625rem;
   --size-100: 6.25rem;
   --size-150: 9.375rem;
   --size-200: 12.5rem;
@@ -55,4 +61,28 @@ ul > li {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+.btn-primary {
+  background-color: var(--primary);
+  color: var(--white);
+  padding: var(--size-14) var(--size-30);
+  border: 1px solid var(--primary);
+  border-radius: var(--size-50);
+  max-width: var(--size-150);
+  font-size: var(--size-14);
+}
+
+.btn-primary:hover {
+  color: var(--white);
+  border: 1px solid var(--primary-light);
+  box-shadow: 0 0 5px var(--primary-light);
+  cursor: pointer;
+}
+
+.logo {
+  border: 1px solid #bdbdbd91;
+  border-radius: 50%;
+  box-shadow: 0 0 var(--size-16) #7b7981;
+  background-color: var(--white);
 }
