Key Benefits and Get Started
Finish implement key benefits section and hover effect

Unstyled content put in for Get Started section

--- a/css/default.css
+++ b/css/default.css
@@ -2,7 +2,7 @@
 :root {
   --white: #ffffff;
   --black: #000;
-  --default-font: #a3abb2;
+  --default-font: #7a8997;
   --primary: #306aea;
   --primary-light: #6287d7;
   --success: #05b392;
