--- a/css/default.css
+++ b/css/default.css
@@ -19,6 +19,7 @@
   --size-16: 1rem;
   --size-18: 1.125rem;
   --size-20: 1.25rem;
+  --size-25: 1.563rem;
   --size-30: 1.875rem;
   --size-40: 2.5rem;
   --size-45: 2.813rem;
