Why Front Section
Implement and style Why Front Section

--- a/css/default.css
+++ b/css/default.css
@@ -39,7 +39,9 @@
   --size-400: 25rem;
   --size-450: 28.125rem;
   --size-550: 34.375rem;
+  --size-650: 40.625rem;
   --size-675: 42.188rem;
+  --size-700: 43.75rem;
 }
 
 /* default styles */
