--- a/css/styles.css
+++ b/css/styles.css
@@ -441,12 +441,13 @@ nav > ul { margin-right: var(--size-30); }
   line-height: 1.8;
 }
 
-.pricing-header-description { font-size: 18px; }
+.pricing-header-description { font-size: var(--size-18); }
 
 .pricing-info-wrapper { 
   padding: var(--size-50) 0; 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  gap: var(--size-40);
 }
 
 .pricing-action-card {
@@ -457,11 +458,17 @@ nav > ul { margin-right: var(--size-30); }
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  min-height: 475px;
-  max-width: 450px;
+  min-height: var(--size-480);
+  max-width: var(--size-450);
+  padding: var(--size-50);
 }
 
-.price { font-size: 30px; }
+.price { 
+  font-size: var(--size-30); 
+  border-bottom: 2px solid var(--default-font);
+  width: 100%;
+  padding-bottom: var(--size-30);
+}
 
 .price > span {
   color: var(--black);
@@ -473,6 +480,8 @@ nav > ul { margin-right: var(--size-30); }
   font-size: var(--size-20);
   max-width: var(--size-350);
 }
+
+.pricing-disclaimer { margin-top: var(--size-10); }
 
 .pricing-graphics-cards {
   display: grid;
