--- a/css/default.css
+++ b/css/default.css
@@ -9,6 +9,7 @@
   --success: #05b392;
   --default-background: #eaeaea;
   --section-background: #e4e5ea;
+  --dark-background: #677787;
   --border-shadow: #e1e0e4;
   
 
@@ -17,11 +18,13 @@
   --size-10: 0.625rem;
   --size-12: 0.75rem;
   --size-14: 0.875rem;
+  --size-15: 0.938rem;
   --size-16: 1rem;
   --size-18: 1.125rem;
   --size-20: 1.25rem;
   --size-25: 1.563rem;
   --size-30: 1.875rem;
+  --size-35: 2.188rem;
   --size-40: 2.5rem;
   --size-45: 2.813rem;
   --size-50: 3.125rem;
@@ -51,6 +54,7 @@
   --size-650: 40.625rem;
   --size-675: 42.188rem;
   --size-700: 43.75rem;
+  --size-775: 48.438rem;
 }
 
 /* default styles */
@@ -90,6 +94,22 @@ ul > li {
   cursor: pointer;
 }
 
+.btn-media {
+  border-radius: var(--size-5);
+  background-color: var(--section-background);
+  width: var(--size-35);
+  height: var(--size-35);
+  text-align: center;
+  padding-top: 6px;
+  color: var(--dark-background);
+}
+
+.btn-media:hover {
+  background-color: var(--dark-background);
+  color: var(--section-background);
+  cursor: pointer;
+}
+
 .logo {
   border: 1px solid #bdbdbd91;
   border-radius: 50%;
@@ -99,5 +119,5 @@ ul > li {
 
 .active { 
   color: var(--primary-light); 
-  font-weight: 500;
+  font-weight: 600;
 }
