Final Content and prep for Animations
Update navbar so it is sticky

Add "back to top" button

Create TODOS for animations and final background graphic

--- a/css/default.css
+++ b/css/default.css
@@ -10,6 +10,7 @@
   --default-background: #eaeaea;
   --section-background: #e4e5ea;
   --dark-background: #677787;
+  --sticky-background: #dee4ec;
   --border-shadow: #e1e0e4;
   
 
@@ -58,7 +59,11 @@
 }
 
 /* default styles */
-* {box-sizing: border-box;}
+*,
+::after,
+::before {box-sizing: border-box;}
+
+html { scroll-behavior: smooth; }
 
 html,
 body {
