Nav Menu and Top Background
Implement nav menu button and make responsive

Implement top background svg but still not responsive

--- a/css/default.css
+++ b/css/default.css
@@ -44,6 +44,7 @@
   --size-225: 14.063rem;
   --size-230: 14.375rem;
   --size-250: 15.625rem;
+  --size-260: 16.25rem;
   --size-300: 18.75rem;
   --size-350: 21.875rem;
   --size-400: 25rem;
