--- a/css/default.css
+++ b/css/default.css
@@ -46,6 +46,7 @@
   --size-250: 15.625rem;
   --size-260: 16.25rem;
   --size-300: 18.75rem;
+  --size-330: 20.625rem;
   --size-350: 21.875rem;
   --size-400: 25rem;
   --size-430: 26.875rem;
